day-5-project/path1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotstar-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotstar
  template:
    metadata:
      labels:
        app: hotstar
    spec:
      containers:
      - name: hotstar
        image: 211125314839.dkr.ecr.us-east-1.amazonaws.com/hotstar
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hotstar-service
spec:
  selector:
    app: hotstar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
