day-5-project/path2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
      - name: swiggy
        image: 211125314839.dkr.ecr.us-east-1.amazonaws.com/swiggy
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: swiggy-service
spec:
  selector:
    app: swiggy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
