day-5-project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /hotstar
        pathType: Prefix
        backend:
          service:
            name: hotstar-service
            port:
              number: 80
      - path: /swiggy
        pathType: Prefix
        backend:
          service:
            name: swiggy-service
            port:
              number: 80
